add index page and managment page torepo

--- a/component.html
+++ b/component.html
@@ -195,7 +195,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="chear-up pressed">
+                <div class="chear-up-btn pressed">
                     <div class="content-wrapper">
                         <span class="data">47200000000</span>
                         <span class="icon">
@@ -392,11 +392,6 @@
         </main>
     </body>
     <script type="text/javascript">
-        $(document).ready(function(){
-            var tag = new Component.Tag(".be-tag");
-            console.log(tag);
-            var scroll = new Component.Scroll2Top(".srcoll-top");
-            console.log(scroll);
-        })
+
     </script>
 </html>
