--- a/detail.html
+++ b/detail.html
@@ -37,7 +37,7 @@
                         <h2>南都公益基金会十年回顾(相伴十年 共同成长)</h2>
                         <div class="meta-data clearfix">
                             <div class="row">
-                                <div class="tags">
+                                <div class="fe-tags">
                                     <span class="fe-tag">魔性</span>
                                     <span class="fe-tag">南都</span>
                                     <span class="fe-tag">很长很长的标签</span>
