--- a/login.html
+++ b/login.html
@@ -9,12 +9,16 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <link rel="stylesheet" type="text/css" href="../css/frame.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/component.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/page.css"/>
+        <link rel="stylesheet" type="text/css" href="css/frame.css"/>
+        <link rel="stylesheet" type="text/css" href="css/component.css"/>
+        <link rel="stylesheet" type="text/css" href="css/page.css"/>
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
+        <script type="text/javascript" src="js/lib/zepto.js"></script>
+        <script type="text/javascript" src="js/lib/zepto.fx.js"></script>
+        <script type="text/javascript" src="js/component.js"></script>
     </head>
     <body>
-        <main>
+        <main class="login">
             <form method="post" id="login" action="">
                 <label for="user">用户名</label><input id="user" type="text" placeholder="输入用户名" required autocomplete="false" maxlength="12">
                 <label for="password">密码</label><input id="password" type="password" placeholder="输入密码" required autocomplete="false" maxlength="12">
