--- a/mamagment.article.html
+++ b/mamagment.article.html
@@ -9,41 +9,45 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <link rel="stylesheet" type="text/css" href="../css/frame.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/component.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/page.css"/>
+        <link rel="stylesheet" type="text/css" href="css/frame.css"/>
+        <link rel="stylesheet" type="text/css" href="css/component.css"/>
+        <link rel="stylesheet" type="text/css" href="css/page.css"/>
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
+        <script type="text/javascript" src="js/lib/zepto.js"></script>
+        <script type="text/javascript" src="js/lib/zepto.fx.js"></script>
+        <script type="text/javascript" src="js/component.js"></script>
         <!--need font awesome  -->
     </head>
     <body>
         <main>
             <aside class="toolbar">
                 <div class="logo item"></div>
-                <div id="article-managment" class="item">
-                    <div class="image-toolbar"></div>
-                    <span class="toolname"></span>
+                <div class="menu-item">
+                    <span class="icon"><li class="fa fa-pencil-square-o"></li></span>
+                    <span class="data">文章管理</span>
                 </div>
-                <div id="tag-managment" class="item">
-                    <div class="image-toolbar"></div>
-                    <span class="toolname"></span>
+                <div class="menu-item">
+                    <span class="icon"><li class="fa fa-pencil-square-o"></li></span>
+                    <span class="data">文章管理</span>
                 </div>
                 <!--暂时不实现  -->
-                <div id="review-managment" class="item">
-                    <div class="image-toolbar"></div>
-                    <span class="toolname"></span>
+                <div class="menu-item">
+                    <span class="icon"><li class="fa fa-pencil-square-o"></li></span>
+                    <span class="data">文章管理</span>
                 </div>
-                <div id="sys-managment" class="item">
-                    <div class="image-toolbar"></div>
-                    <span class="toolname"></span>
+                <div class="menu-item">
+                    <span class="icon"><li class="fa fa-pencil-square-o"></li></span>
+                    <span class="data">文章管理</span>
                 </div>
             </aside>
             <article>
                 <div class="header">
                     <div class="location"></div>
-                    <div class="user-item">
-                        <div class="portrait">
-                            <img src="" alt="">
-                        </div>
-                        <span class="name">用户名</span>
+                    <div class="login-portrait clearfix">
+                        <span class="portrait">
+                            <img src="image/thumnail.png" alt="头像">
+                        </span>
+                        <span class="username">黄子江</span>
                     </div>
                 </div>
                 <section class="content-wrapper">
